--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <span class="text-container">Govt. Model Engineering College</span>,
         Thrikkakara, Kochi
       </h3>
-      <img src="assets/mec.JPG" alt="Model Engineering College" id="model"/>
+      <img src="assets/mec.JPG" alt="Model Engineering College" id="model" />
       <p>
         As a college student majoring in Electronics and Communication
         Engineering, I'm really passionate about what I'm learning. I find
@@ -33,20 +33,16 @@
       </p>
     </div>
     <div id="skills">
-      <h3>My Skills & Experiences include :</h3>
+      <h3><span class="text-container">My Skills & Experiences include :</span></h3>
       <p>
         I've had the chance to try my hand at various programming languages,
         like Python, HTML, CSS, JavaScript, and MySQL. For my Class 12 Computer
         Science project, I developed a Shop Management System where I used
         Python for the front end and MySQL for the back end.
       </p>
-      <p>
-        <b
-          ><span class="text-container"
-            >Some snapshots from my project :</span
-          ></b
-        >
-      </p>
+      <h3>
+        <span class="text-container">Some snapshots from my project :</span>
+      </h3>
       <div id="images">
         <img src="assets/edit.jpg" alt="edit menu" />
         <img src="assets/bill.jpg" alt="bill menu" />
