--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
       </p>
     </div>
     <div id="skills">
-      <h3><span class="text-container">My Skills & Experiences include :</span></h3>
+      <h3>
+        <span class="text-container">My Skills & Experiences include :</span>
+      </h3>
       <p>
         I've had the chance to try my hand at various programming languages,
         like Python, HTML, CSS, JavaScript, and MySQL. For my Class 12 Computer
@@ -68,6 +70,8 @@
         />
         LinkedIn
       </a>
+      <button>
+        <span>
       <a
         href="mailto:arjunajayan2005@gmail.com"
         target="_blank"
@@ -85,23 +89,28 @@
         />
         Mail ID
       </a>
-      <a
-        href="https://www.instagram.com/arjun.a_05/"
-        target="_blank"
-        style="text-decoration: none; display: flex; align-items: center"
-      >
-        <img
-          src="assets/instagram.png"
-          alt="Instagram Logo"
-          style="
-            width: 30px;
-            height: 30px;
-            margin-right: 5px;
-            margin-bottom: 5px;
-          "
-        />
-        Instagram
-      </a>
+      </span>
+      </button>
+      <button>
+        <span>
+          <a
+            href="https://www.instagram.com/arjun.a_05/"
+            target="_blank"
+            style="text-decoration: none; display: flex; align-items: center"
+          >
+            <img
+              src="assets/instagram.png"
+              alt="Instagram Logo"
+              style="
+                width: 30px;
+                height: 30px;
+                margin-right: 5px;
+                margin-bottom: 5px;
+              "
+            />Instagram
+          </a>
+        </span>
+      </button>
     </div>
   </body>
 </html>
