--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
       </p>
     </div>
     <div id="skills">
-      <h3>
-        <span class="text-container">My Skills & Experiences include :</span>
-      </h3>
+      <h3><span class="text-container">My Skills & Experiences include :</span></h3>
       <p>
         I've had the chance to try my hand at various programming languages,
         like Python, HTML, CSS, JavaScript, and MySQL. For my Class 12 Computer
@@ -45,7 +43,7 @@
       <h3>
         <span class="text-container">Some snapshots from my project :</span>
       </h3>
-      <div id="images">
+      <div id="snapshots">
         <img src="assets/edit.jpg" alt="edit menu" />
         <img src="assets/bill.jpg" alt="bill menu" />
         <img src="assets/search.jpg" alt="search menu" />
@@ -70,8 +68,6 @@
         />
         LinkedIn
       </a>
-      <button>
-        <span>
       <a
         href="mailto:arjunajayan2005@gmail.com"
         target="_blank"
@@ -89,28 +85,23 @@
         />
         Mail ID
       </a>
-      </span>
-      </button>
-      <button>
-        <span>
-          <a
-            href="https://www.instagram.com/arjun.a_05/"
-            target="_blank"
-            style="text-decoration: none; display: flex; align-items: center"
-          >
-            <img
-              src="assets/instagram.png"
-              alt="Instagram Logo"
-              style="
-                width: 30px;
-                height: 30px;
-                margin-right: 5px;
-                margin-bottom: 5px;
-              "
-            />Instagram
-          </a>
-        </span>
-      </button>
+      <a
+        href="https://www.instagram.com/arjun.a_05/"
+        target="_blank"
+        style="text-decoration: none; display: flex; align-items: center"
+      >
+        <img
+          src="assets/instagram.png"
+          alt="Instagram Logo"
+          style="
+            width: 30px;
+            height: 30px;
+            margin-right: 5px;
+            margin-bottom: 5px;
+          "
+        />
+        Instagram
+      </a>
     </div>
   </body>
 </html>
