--- a/index.html
+++ b/index.html
@@ -9,10 +9,23 @@
   </head>
 
   <body>
-    <h1><span class="text-container">Hey! I'm Arjun</span></h1>
+    <div class="navbar">
+      <h1><span class="text-container">Hey! I'm Arjun</span></h1>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Experiences</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#socials">Contact Me</a></li>
+      </ul>
+    </div>
+    <div id="spacer"></div>
     <div id="about">
       <h3>
-        I am a first year Electronics & Communication Engineering student at
+        I am a first year
+        <span class="text-container"
+          >Electronics & Communication Engineering</span
+        >
+        student at
         <span class="text-container">Govt. Model Engineering College</span>,
         Thrikkakara, Kochi
       </h3>
@@ -33,12 +46,14 @@
       </p>
     </div>
     <div id="skills">
-      <h3><span class="text-container">My Skills & Experiences include :</span></h3>
+      <h3>
+        <span class="text-container">My Skills & Experiences include :</span>
+      </h3>
       <p>
-        I've had the chance to try my hand at various programming languages,
-        like Python, HTML, CSS, JavaScript, and MySQL. For my Class 12 Computer
-        Science project, I developed a Shop Management System where I used
-        Python for the front end and MySQL for the back end.
+        I've had the chance to try my hand at various languages, like Python,
+        HTML, CSS, JavaScript, and MySQL. For my Class 12 Computer Science
+        project, I developed a Shop Management System where I used Python for
+        the front end and MySQL for the back end.
       </p>
       <h3>
         <span class="text-container">Some snapshots from my project :</span>
@@ -47,6 +62,33 @@
         <img src="assets/edit.jpg" alt="edit menu" />
         <img src="assets/bill.jpg" alt="bill menu" />
         <img src="assets/search.jpg" alt="search menu" />
+      </div>
+      <div id="education">
+        <h3><span class="text-container">My Education background</span></h3>
+        <p>
+          I've had the opportunity to attend a variety of schools throughout my
+          educational journey. This diverse experience has significantly
+          contributed to my growth and skills. Here's a list of the educational
+          institutions I've been to
+        </p>
+        <div id="schools">
+          <ul id="school_name">
+            <li>Kendriya Vidyalaya No 1 Palakkad</li>
+            <li>Kendriya Vidyalaya Mahe</li>
+            <li>Kendriya Vidyalaya Anna Nagar, Chennai</li>
+            <li>Kendriya Vidyalaya NAD Aluva</li>
+            <li>Kendriya Vidyalaya Puranattukara, Thrissur</li>
+            <li>Govt Model Engineering College</li>
+          </ul>
+          <ul id="years">
+            <li>2010 - 2011</li>
+            <li>2011 - 2013</li>
+            <li>2013 - 2016</li>
+            <li>2016 - 2019</li>
+            <li>2019 - 2023</li>
+            <li>2023 - 2027</li>
+          </ul>
+        </div>
       </div>
     </div>
     <div id="socials">
