--- a/index.html
+++ b/index.html
@@ -1,149 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Arjun's Portfolio</title>
     <link rel="stylesheet" href="assets/style.css" />
-    <link rel="icon" href="assets/header icon.ico" type="image/x-icon" />
-  </head>
+    <link rel="icon" href="assets/header_icon.ico" type="image/x-icon" />
+</head>
 
-  <body>
-    <div class="navbar">
-      <h1><span class="text-container">Hey! I'm Arjun</span></h1>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Experiences</a></li>
-        <li><a href="#education">Education</a></li>
-        <li><a href="#socials">Contact Me</a></li>
-      </ul>
-    </div>
+<body>
+    <nav class="navbar">
+        <div class="container">
+            <h1><a href="#">Hey! I'm Arjun</a></h1>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Experiences</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#socials">Contact Me</a></li>
+            </ul>
+        </div>
+    </nav>
     <div id="spacer"></div>
     <div id="about">
-      <h3>
-        I am a first year
-        <span class="text-container"
-          >Electronics & Communication Engineering</span
-        >
-        student at
-        <span class="text-container">Govt. Model Engineering College</span>,
-        Thrikkakara, Kochi
-      </h3>
-      <img src="assets/mec.JPG" alt="Model Engineering College" id="model" />
-      <p>
-        As a college student majoring in Electronics and Communication
-        Engineering, I'm really passionate about what I'm learning. I find
-        technology fascinating, not just in computer science but also in the
-        world of electronics and communication systems. I believe that the blend
-        of computer science and my field has so much potential. It's the perfect
-        mix for creating smarter and more efficient gadgets, communication
-        devices, and other cool tech stuff. This combination allows us to
-        connect the physical and digital worlds, leading to innovations that
-        make our lives better. With a good grasp of Electronics and
-        Communication Engineering and some computer science know-how, I'm
-        excited to explore new ideas and push the limits of what technology can
-        do.
-      </p>
+        <h3>
+            I am a first year
+            <span class="text-container">Electronics & Communication Engineering</span>
+            student at
+            <span class="text-container">Govt. Model Engineering College</span>,
+            Thrikkakara, Kochi
+        </h3>
+        <img src="assets/mec.JPG" alt="Model Engineering College" id="model" />
+        <p>
+            As a college student majoring in Electronics and Communication
+            Engineering, I'm really passionate about what I'm learning. I find
+            technology fascinating, not just in computer science but also in the
+            world of electronics and communication systems. I believe that the blend
+            of computer science and my field has so much potential. It's the perfect
+            mix for creating smarter and more efficient gadgets, communication
+            devices, and other cool tech stuff. This combination allows us to
+            connect the physical and digital worlds, leading to innovations that
+            make our lives better. With a good grasp of Electronics and
+            Communication Engineering and some computer science know-how, I'm
+            excited to explore new ideas and push the limits of what technology can
+            do.
+        </p>
     </div>
     <div id="skills">
-      <h3>
-        <span class="text-container">My Skills & Experiences include :</span>
-      </h3>
-      <p>
-        I've had the chance to try my hand at various languages, like Python,
-        HTML, CSS, JavaScript, and MySQL. For my Class 12 Computer Science
-        project, I developed a Shop Management System where I used Python for
-        the front end and MySQL for the back end.
-      </p>
-      <h3>
-        <span class="text-container">Some snapshots from my project :</span>
-      </h3>
-      <div id="snapshots">
-        <img src="assets/edit.jpg" alt="edit menu" />
-        <img src="assets/bill.jpg" alt="bill menu" />
-        <img src="assets/search.jpg" alt="search menu" />
-      </div>
-      <div id="education">
-        <h3><span class="text-container">My Education background</span></h3>
+        <h3>
+            <span class="text-container">My Skills & Experiences include :</span>
+        </h3>
         <p>
-          I've had the opportunity to attend a variety of schools throughout my
-          educational journey. This diverse experience has significantly
-          contributed to my growth and skills. Here's a list of the educational
-          institutions I've been to
+            I've had the chance to try my hand at various languages, like Python,
+            HTML, CSS, JavaScript, and MySQL. For my Class 12 Computer Science
+            project, I developed a Shop Management System where I used Python for
+            the front end and MySQL for the back end.
         </p>
-        <div id="schools">
-          <ul id="school_name">
-            <li>Kendriya Vidyalaya No 1 Palakkad</li>
-            <li>Kendriya Vidyalaya Mahe</li>
-            <li>Kendriya Vidyalaya Anna Nagar, Chennai</li>
-            <li>Kendriya Vidyalaya NAD Aluva</li>
-            <li>Kendriya Vidyalaya Puranattukara, Thrissur</li>
-            <li>Govt Model Engineering College</li>
-          </ul>
-          <ul id="years">
-            <li>2010 - 2011</li>
-            <li>2011 - 2013</li>
-            <li>2013 - 2016</li>
-            <li>2016 - 2019</li>
-            <li>2019 - 2023</li>
-            <li>2023 - 2027</li>
-          </ul>
+        <div class="card-container">
+            <div class="card" data-card-id="shop"> <img src="assets/shop.png" alt="Image 1">
+                <h3>Shop Management System</h3>
+                <p>This Python and MySQL powered system offers a user-friendly interface for both customers and
+                    employees. Customers can browse available items, add them to their cart, and complete their
+                    purchase. Employees can manage the inventory by adding or removing items as needed.</p>
+            </div>
+            <div class="card" data-card-id="timesked"> <img src="assets/TimeSked.png" alt="Image 2">
+                <h3>TimeSked</h3>
+                <p>TimeSked, your Telegram bot friend, simplifies event scheduling. Just send a message with your event
+                    details, and TimeSked will intelligently extract the information. It then creates a Google Calendar
+                    link for you, saving you time and keeping you organized.</p>
+            </div>
         </div>
-      </div>
+
+        <div id="popup" class="hidden">
+            <div class="popup-header">
+                <h2>Project Details</h2>
+                <button class="close-popup-btn">×</button> <!-- Add this button -->
+            </div>
+            <div id="popup-content"></div>
+        </div>
+
+
+        <div id="education">
+            <h3><span class="text-container">My Education background</span></h3>
+            <p>
+                I've had the opportunity to attend a variety of schools throughout my
+                educational journey. This diverse experience has significantly
+                contributed to my growth and skills. Here's a list of the educational
+                institutions I've been to
+            </p>
+            <div id="schools">
+                <ul id="school_name">
+                    <li>Kendriya Vidyalaya No 1 Palakkad</li>
+                    <li>Kendriya Vidyalaya Mahe</li>
+                    <li>Kendriya Vidyalaya Anna Nagar, Chennai</li>
+                    <li>Kendriya Vidyalaya NAD Aluva</li>
+                    <li>Kendriya Vidyalaya Puranattukara, Thrissur</li>
+                    <li>Govt Model Engineering College</li>
+                </ul>
+                <ul id="years">
+                    <li>2010 - 2011</li>
+                    <li>2011 - 2013</li>
+                    <li>2013 - 2016</li>
+                    <li>2016 - 2019</li>
+                    <li>2019 - 2023</li>
+                    <li>2023 - 2027</li>
+                </ul>
+            </div>
+        </div>
     </div>
     <div id="socials">
-      <h3>Reach out to me at :</h3>
-      <a
-        href="https://www.linkedin.com/in/arjun-a-538a0a156/"
-        target="_blank"
-        style="text-decoration: none; display: flex; align-items: center"
-      >
-        <img
-          src="assets/linkedin.png"
-          alt="LinkedIn Logo"
-          style="
+        <h3>Reach out to me at :</h3>
+        <a href="https://www.linkedin.com/in/arjun-a-538a0a156/" target="_blank"
+            style="text-decoration: none; display: flex; align-items: center">
+            <img src="assets/linkedin.png" alt="LinkedIn Logo" style="
             width: 30px;
             height: 30px;
             margin-right: 5px;
             margin-bottom: 5px;
-          "
-        />
-        LinkedIn
-      </a>
-      <a
-        href="mailto:arjunajayan2005@gmail.com"
-        target="_blank"
-        style="text-decoration: none; display: flex; align-items: center"
-      >
-        <img
-          src="assets/gmail.png"
-          alt="Gmail Logo"
-          style="
+          " />
+            LinkedIn
+        </a>
+        <a href="mailto:arjunajayan2005@gmail.com" target="_blank"
+            style="text-decoration: none; display: flex; align-items: center">
+            <img src="assets/gmail.png" alt="Gmail Logo" style="
             width: 30px;
             height: 30px;
             margin-right: 5px;
             margin-bottom: 5px;
-          "
-        />
-        Mail ID
-      </a>
-      <a
-        href="https://www.instagram.com/arjun.a_05/"
-        target="_blank"
-        style="text-decoration: none; display: flex; align-items: center"
-      >
-        <img
-          src="assets/instagram.png"
-          alt="Instagram Logo"
-          style="
+          " />
+            Mail ID
+        </a>
+        <a href="https://www.instagram.com/arjun.a_05/" target="_blank"
+            style="text-decoration: none; display: flex; align-items: center">
+            <img src="assets/instagram.png" alt="Instagram Logo" style="
             width: 30px;
             height: 30px;
             margin-right: 5px;
             margin-bottom: 5px;
-          "
-        />
-        Instagram
-      </a>
+          " />
+            Instagram
+        </a>
     </div>
-  </body>
+    <script src="popup.js"></script>
+</body>
+
 </html>
