--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Arjun's Portfolio</title>
     <link rel="stylesheet" href="assets/style.css" />
-    <link rel="icon" href="assets/header_icon.ico" type="image/x-icon" />
+    <link rel="icon" href="https://raw.githubusercontent.com/arjun-mec/My_Portfolio/main/assets/header_icon.ico" type="image/x-icon" />
 </head>
 
 <body>
